--- a/package.json
+++ b/package.json
@@ -3,40 +3,23 @@
   "version": "1.0.0",
   "description": "Front End client app to our Fitness Tracker project",
   "main": "index.js",
+  "scripts": {
+    "test": "react-scripts test",
+    "start-dev": "NODE_ENV='development' react-scripts start",
+    "start": "react-scripts start",
+    "build": "NODE_ENV='production' react-scripts build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PrestonS95/FitnessTrackerFrontEnd.git"
   },
   "author": "Dylan Kammerlohr and Preston Sullins",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PrestonS95/FitnessTrackerFrontEnd/issues"
-  },
-  "homepage": "https://github.com/PrestonS95/FitnessTrackerFrontEnd#readme",
-  "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "start-dev": "NODE_ENV='development' react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "react-router-dom": "^6.3.0"
   },
   "browserslist": {
     "production": [
